# kurveclient

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: kurveauth-ci-pytest.yml  kurveclient-ci-pytest.yml
docs/: index.md
examples/: odsc_west24_ex1.ipynb  odsc_west24_ex2.ipynb  odsc_west24_ex3.ipynb  odsc_west24_ex4.ipynb  odsc_west24_ex5.ipynb  relbench_ex1.ipynb  relbench_ex2.ipynb
kurveclient/: .interaction.py.swp  app.py  auth.py  core.py  interaction.py  models.py
search/: search_index.json
tests/: __init__.py  test_client.py
